--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     table { width: 100%; border-collapse: collapse; margin-top: 20px; }
     th, td { border: 1px solid #ccc; padding: 6px; font-size: 14px; text-align: left; }
     th { background: #eee; }
+    tr:hover { background-color: #f0f0f0; cursor: pointer; }
   </style>
 </head>
 <body>
@@ -64,36 +65,50 @@
         return markerColors["default"];
       };
 
-      data
-        .filter(call => call.Disposition !== "z-CALL NOT ENTERED IN CAD")
-        .sort((a, b) => new Date(b.ResponseDate) - new Date(a.ResponseDate))
-        .forEach(call => {
-          // Add marker for calls in last 2 hours
-          const callDate = new Date(call.ResponseDate);
-          if (callDate > twoHoursAgo && call.Latitude && call.Longitude) {
-            const color = getColor(call.Description);
-            const marker = L.circleMarker([call.Latitude, call.Longitude], {
-              radius: 8,
-              color: color,
-              fillColor: color,
-              fillOpacity: 0.8
-            }).addTo(map);
-            marker.bindPopup(`<b>${new Date(call.ResponseDate).toLocaleString()}</b><br>${call.Problem}<br>${call.Address}<br>${call.Disposition}`);
-          }
+      const markers = [];
 
-          // Always add to table
-          const row = document.createElement("tr");
-          row.innerHTML = `
-            <td>${call.IncidentNumber}</td>
-            <td>${new Date(call.ResponseDate).toLocaleString()}</td>
-            <td>${call.Problem || ""}</td>
-            <td>${call.Description || ""}</td>
-            <td>${call.Address || ""}</td>
-            <td>${call.Disposition || ""}</td>
-            <td>${call.CallCompleteInfo || ""}</td>
-          `;
-          tableBody.appendChild(row);
-        });
+      const filtered = data
+        .filter(call => call.Disposition !== "z-CALL NOT ENTERED IN CAD")
+        .sort((a, b) => new Date(b.ResponseDate) - new Date(a.ResponseDate));
+
+      filtered.forEach((call, index) => {
+        const callDate = new Date(call.ResponseDate);
+        let marker = null;
+
+        if (callDate > twoHoursAgo && call.Latitude && call.Longitude) {
+          const color = getColor(call.Description);
+          marker = L.circleMarker([call.Latitude, call.Longitude], {
+            radius: 8,
+            color: color,
+            fillColor: color,
+            fillOpacity: 0.8
+          }).addTo(map);
+          marker.bindPopup(
+            `<b>${new Date(call.ResponseDate).toLocaleString()}</b><br>${call.Problem}<br>${call.Address}<br>${call.Disposition}`
+          );
+        }
+
+        markers.push(marker);
+
+        const row = document.createElement("tr");
+        row.id = `row-${index}`;
+        row.innerHTML = `
+          <td>${call.IncidentNumber}</td>
+          <td>${new Date(call.ResponseDate).toLocaleString()}</td>
+          <td>${call.Problem || ""}</td>
+          <td>${call.Description || ""}</td>
+          <td>${call.Address || ""}</td>
+          <td>${call.Disposition || ""}</td>
+          <td>${call.CallCompleteInfo || ""}</td>
+        `;
+        if (marker) {
+          row.addEventListener('click', () => {
+            map.setView(marker.getLatLng(), 16);
+            marker.openPopup();
+          });
+        }
+        tableBody.appendChild(row);
+      });
     }
 
     loadData();
