--- a/index.html
+++ b/index.html
@@ -114,5 +114,17 @@
     loadData();
     setInterval(loadData, 300000); // Refresh every 5 minutes
   </script>
+
+  <div id="legend" style="position: absolute; bottom: 10px; left: 10px; background: white; padding: 10px; border-radius: 5px; box-shadow: 0 0 5px rgba(0,0,0,0.3); font-size: 14px; line-height: 1.5;">
+    <strong>Legend</strong><br>
+    <span style="color:red;">&#9679;</span> P1 - Danger Life or Property<br>
+    <span style="color:orange;">&#9679;</span> P2<br>
+    <span style="color:yellow;">&#9679;</span> P3<br>
+    <span style="color:green;">&#9679;</span> P4<br>
+    <span style="color:blue;">&#9679;</span> P5<br>
+    <span style="color:purple;">&#9679;</span> P6<br>
+    <span style="color:gray;">&#9679;</span> Other
+  </div>
 </body>
 </html>
+
