--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
     setInterval(loadData, 300000); // Refresh every 5 minutes
   </script>
 
-  <div id="legend" style="position: absolute; bottom: 10px; left: 10px; background: white; padding: 10px; border-radius: 5px; box-shadow: 0 0 5px rgba(0,0,0,0.3); font-size: 14px; line-height: 1.5;">
+  <div id="legend" style="position: absolute; top: 10px; right: 10px; background: white; padding: 10px; border-radius: 5px; box-shadow: 0 0 5px rgba(0,0,0,0.3); font-size: 14px; line-height: 1.5;">
     <strong>Legend</strong><br>
     <span style="color:red;">&#9679;</span> P1 - Danger Life or Property<br>
     <span style="color:orange;">&#9679;</span> P2<br>
