--- a/index.html
+++ b/index.html
@@ -12,20 +12,32 @@
     th, td { border: 1px solid #ccc; padding: 6px; font-size: 14px; text-align: left; }
     th { background: #eee; }
     tr:hover { background-color: #f0f0f0; cursor: pointer; }
+    #legend {
+      position: absolute; 
+      top: 10px; 
+      right: 10px; 
+      background: white; 
+      padding: 10px; 
+      border-radius: 5px; 
+      box-shadow: 0 0 5px rgba(0,0,0,0.3); 
+      font-size: 14px; 
+      line-height: 1.5; 
+      z-index: 1000;
+    }
   </style>
 </head>
 <body>
   <h2>Oklahoma City CAD Calls</h2>
   <div id="map"></div>
 
-  <div id="legend" style="position: absolute; top: 10px; right: 10px; background: white; padding: 10px; border-radius: 5px; box-shadow: 0 0 5px rgba(0,0,0,0.3); font-size: 14px; line-height: 1.5; z-index: 1000;">
+  <div id="legend">
     <strong>Legend</strong><br>
     <span style="color:red;">&#9679;</span> P1 - Danger Life or Property<br>
     <span style="color:orange;">&#9679;</span> P2 May Need Life/Prop Protect<br>
     <span style="color:yellow;">&#9679;</span> P3 Danger of Life/Prop NOT Inv<br>
     <span style="color:green;">&#9679;</span> P4 Misdemeanor Crime<br>
     <span style="color:blue;">&#9679;</span> P5 Time is not a Factor<br>
-    <span style="color:purple;">&#9679;</span> P6 Time is not a factor/Report6<br>
+    <span style="color:purple;">&#9679;</span> P6 Time is not a factor/Report<br>
     <span style="color:gray;">&#9679;</span> Other
   </div>
 
@@ -44,6 +56,7 @@
     </thead>
     <tbody></tbody>
   </table>
+
   <script>
     async function loadData() {
       const response = await fetch("CadCalls.json?_=" + new Date().getTime());
@@ -76,63 +89,60 @@
         return markerColors["default"];
       };
 
+      const maskAddressNumber = (address) => {
+        const match = address.match(/^(\d{3})\d{2}(.*)/);
+        return match ? `${match[1]}XX${match[2]}` : address;
+      };
+
       const markers = [];
 
       const filtered = data
         .filter(call => call.Disposition !== "z-CALL NOT ENTERED IN CAD")
         .sort((a, b) => new Date(b.ResponseDate) - new Date(a.ResponseDate));
 
-     function maskAddressNumber(address) {
-  const match = address.match(/^(\d{3})\d{2}(.*)/);
-  return match ? `${match[1]}XX${match[2]}` : address;
-}
+      filtered.forEach((call, index) => {
+        const callDate = new Date(call.ResponseDate);
+        const maskedAddress = maskAddressNumber(call.Address || "");
+        let marker = null;
 
-filtered.forEach((call, index) => {
-  const callDate = new Date(call.ResponseDate);
-  let marker = null;
-  const maskedAddress = maskAddressNumber(call.Address || "");
+        if (callDate > twoHoursAgo && call.Latitude && call.Longitude) {
+          const color = getColor(call.Description);
+          marker = L.circleMarker([call.Latitude, call.Longitude], {
+            radius: 8,
+            color: color,
+            fillColor: color,
+            fillOpacity: 0.8
+          }).addTo(map);
+          marker.bindPopup(
+            `<b>${new Date(call.ResponseDate).toLocaleString()}</b><br>${call.Problem}<br>${maskedAddress}<br>${call.Disposition}`
+          );
+        }
 
-  if (callDate > twoHoursAgo && call.Latitude && call.Longitude) {
-    const color = getColor(call.Description);
-    marker = L.circleMarker([call.Latitude, call.Longitude], {
-      radius: 8,
-      color: color,
-      fillColor: color,
-      fillOpacity: 0.8
-    }).addTo(map);
-    marker.bindPopup(
-      `<b>${new Date(call.ResponseDate).toLocaleString()}</b><br>${call.Problem}<br>${maskedAddress}<br>${call.Disposition}`
-    );
-  }
+        markers.push(marker);
 
-  markers.push(marker);
-
-  const row = document.createElement("tr");
-  row.id = `row-${index}`;
-  row.innerHTML = `
-    <td>${call.IncidentNumber}</td>
-    <td>${new Date(call.ResponseDate).toLocaleString()}</td>
-    <td>${call.Problem || ""}</td>
-    <td>${call.Description || ""}</td>
-    <td>${maskedAddress}</td>
-    <td>${call.Disposition || ""}</td>
-    <td>${call.CallCompleteInfo || ""}</td>
-  `;
-  if (marker) {
-    row.addEventListener('click', () => {
-      map.setView(marker.getLatLng(), 16);
-      marker.openPopup();
-    });
-  }
-  tableBody.appendChild(row);
-});
-
+        const row = document.createElement("tr");
+        row.id = `row-${index}`;
+        row.innerHTML = `
+          <td>${call.IncidentNumber}</td>
+          <td>${new Date(call.ResponseDate).toLocaleString()}</td>
+          <td>${call.Problem || ""}</td>
+          <td>${call.Description || ""}</td>
+          <td>${maskedAddress}</td>
+          <td>${call.Disposition || ""}</td>
+          <td>${call.CallCompleteInfo || ""}</td>
+        `;
+        if (marker) {
+          row.addEventListener('click', () => {
+            map.setView(marker.getLatLng(), 16);
+            marker.openPopup();
+          });
+        }
+        tableBody.appendChild(row);
+      });
+    }
 
     loadData();
     setInterval(loadData, 300000); // Refresh every 5 minutes
   </script>
-
-
 </body>
 </html>
-
