--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   <table id="call-table">
     <thead>
       <tr>
-        <th>Incident #</th>
+        <th>CAD Incident #</th>
         <th>Response Date</th>
         <th>Problem</th>
         <th>Description</th>
